fixed color contrast

--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -51,3 +51,10 @@
     overflow-y: auto;
     border-radius: 25px;
 }
+
+.user-container p {
+    color:black;
+}
+.user-container h2 {
+    text-align: center;
+}
